<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="after_battery_saver_off">After battery saver is off</string>
    <string name="after_battery_saver_on">After battery saver is on</string>
    <string name="app_battery_saving">Use app battery saving</string>
    <string name="app_battery_saving_settings">App battery saving settings</string>
    <string name="app_name">Better Battery Saver</string>
    <string name="app_receiver_settings">App receiver settings</string>
    <string name="app_receivers_manager">App receivers manager</string>
    <string name="app_service_settings">App service settings</string>
    <string name="app_services_manager">App services manager</string>
    <string name="app_settings">App settings</string>
    <string name="automatically">Automatically</string>
    <string name="battery_level_threshold">Battery level threshold [%s%%]</string>
    <string name="battery_saver_disabled">Better Battery Saver has been disabled.</string>
    <string name="battery_saver_enabled">Better Battery Saver has been enabled.</string>
    <string name="battery_saver_settings">Battery saver settings</string>
    <string name="battery_saving">Battery saving</string>
    <string name="battery_saving_settings">Battery saving settings</string>
    <string name="dark_app_theme">Set dark app theme</string>
    <string name="developer">Developer</string>
    <string name="donate">Donate</string>
    <string name="donate_paypal">Click to donate via Paypal</string>
    <string name="enable_app_battery_saving">Enable battery saving for this app</string>
    <string name="exit_mode">Exit mode</string>
    <string name="grant_write_system_settings_permission">Grant permission</string>
    <string name="grant_write_system_settings_permission_message">"If you want to use this feature, you need to grant permission to write system settings to this app.
Please enable writing system settings using provided switch in the next screen."</string>
    <string name="headsup_notifications">Heads-up notifications</string>
    <string name="lowest_app_brightness">Set lowest app brightness</string>
    <string name="modify_system_settings">Modify system settings</string>
    <string name="no_activities">Do not run activities</string>
    <string name="no_alarms">Do not start alarms</string>
    <string name="no_app_launch">Do not launch app</string>
    <string name="no_auto_sync_control">Do not use auto sync</string>
    <string name="no_bluetooth">Do not use Bluetooth</string>
    <string name="no_camera">Do not use camera</string>
    <string name="no_network_connection">Do not use network connection</string>
    <string name="no_notification_lights">Do not use notification lights</string>
    <string name="no_notifications">Do not show notifications</string>
    <string name="no_receivers">Do no start receivers</string>
    <string name="no_services">Do not start services</string>
    <string name="no_vibrations">Do not use vibrations</string>
    <string name="no_wakelocks">Do not use wakelocks</string>
    <string name="no_wifi_ap_control">Do not use Wi-Fi AP</string>
    <string name="no_wifi_control">Do not use Wi-Fi</string>
    <string name="notification">From notification</string>
    <string name="open_xda">Click to open XDA thread</string>
    <string name="parallel_android_saver">Parallel with Android battery saver</string>
    <string name="parallel_doze_mode">Parallel with Doze mode</string>
    <string name="reset_all_settings">Reset all settings</string>
    <string name="screen_timeout">Screen timetout [%s seconds]</string>
    <string name="set_automatic_brightness">Set automatic brightness</string>
    <string name="set_lowest_brightness">Set lowest brightness</string>
    <string name="set_screen_timeout">Set screen timeout</string>
    <string name="settings">Settings</string>
    <string name="show_info_notifications">Show info notifications</string>
    <string name="show_info_notifications_summary">Show info notifications when turned on/off</string>
    <string name="show_system_apps">Show system apps</string>
    <string name="show_system_receivers">Show system receivers</string>
    <string name="show_system_services">Show system services</string>
    <string name="start_mode">Start mode</string>
    <string name="support">Support</string>
    <string name="turn_airplane_mode_off">Turn off Airplane mode</string>
    <string name="turn_airplane_mode_on">Turn on Airplane mode</string>
    <string name="turn_android_saver_off">Turn off Android battery saver</string>
    <string name="turn_android_saver_on">Turn on Android battery saver</string>
    <string name="turn_auto_sync_off">Turn off auto sync</string>
    <string name="turn_auto_sync_on">Turn on auto sync</string>
    <string name="turn_bluetooth_off">Turn off Bluetooth</string>
    <string name="turn_bluetooth_on">Turn on Bluetooth</string>
    <string name="turn_device_off">Turn off device</string>
    <string name="turn_doze_off">Turn off Doze</string>
    <string name="turn_doze_on">Turn on Doze</string>
    <string name="turn_gps_off">Turn off GPS</string>
    <string name="turn_gps_on">Turn on GPS</string>
    <string name="turn_mobile_data_off">Turn off mobile data</string>
    <string name="turn_mobile_data_on">Turn on mobile data</string>
    <string name="turn_nfc_off">Turn off NFC</string>
    <string name="turn_nfc_on">Turn on NFC</string>
    <string name="turn_off">Turn off</string>
    <string name="turn_off_message">Do you want to turn off Better Battery Saver now?</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_on_message">Do you want to turn on Better Battery Saver now?</string>
    <string name="turn_screen_off">Turn off screen</string>
    <string name="turn_screen_on">Turn on screen</string>
    <string name="turn_wifi_ap_off">Turn Wi-Fi AP off</string>
    <string name="turn_wifi_ap_on">Turn Wi-Fi AP on</string>
    <string name="turn_wifi_off">Turn off Wi-Fi</string>
    <string name="turn_wifi_on">Turn on Wi-Fi</string>
    <string name="version">Version</string>
</resources>
